# pycodedoc

./: README.md  generate_docs.py  project.md  pyproject.toml  repo_map.json  requirements.txt
debug/: dd.py
docs/: project-doc.md
notebooks/: codedoc-demo.ipynb  metadata.yaml
notebooks/.codeas/: settings.yaml
scripts/: generate_docs.py  get_prompts.py
src/codedoc/: costs.py  deps.py  docgen.py  executor.py  llm.py  metadata.py  parser.py  process.py  prompts.py  structure.py  utils.py
src/codedoc/parsing/: _import_parser.py  deps.py  engine.py  model.py  python.py
src/pycodedoc/: __init__.py  cli.py  costs.py  docgen.py  llm.py  parser.py  prompts.py  utils.py
