[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "[PROJECT_NAME]"
authors = [
    {name = "[AUTHOR]", email = "[EMAIL]"},
]
description = "[DESCRIPTION]"
requires-python = "[PYTHON-VERSION]"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
# the version requires you to add an __init__.py at the root of your project folder 
# unser src/ and add a __version__ variable with the version number
version = {attr = "[PROJECT_NAME].__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}